Lab1/lab1-testsuite/ParGrammar.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParGrammar where
import qualified AbsGrammar
import LexGrammar
}

%name pProgram Program
%name pListDef ListDef
%name pDef Def
%name pListArg ListArg
%name pListDecl ListDecl
%name pListStm ListStm
%name pStm Stm
%name pArg Arg
%name pDecl Decl
%name pElse Else
%name pExp15 Exp15
%name pExp14 Exp14
%name pExp13 Exp13
%name pExp12 Exp12
%name pExp11 Exp11
%name pExp9 Exp9
%name pExp8 Exp8
%name pExp4 Exp4
%name pExp3 Exp3
%name pExp2 Exp2
%name pExp Exp
%name pExp1 Exp1
%name pExp5 Exp5
%name pExp6 Exp6
%name pExp7 Exp7
%name pExp10 Exp10
%name pExp16 Exp16
%name pListExp ListExp
%name pType Type
%name pStringList StringList
%name pListString ListString
-- no lexer declaration
%monad { Either String } { (>>=) } { return }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&' { PT _ (TS _ 4) }
  '&&' { PT _ (TS _ 5) }
  '(' { PT _ (TS _ 6) }
  ')' { PT _ (TS _ 7) }
  '*' { PT _ (TS _ 8) }
  '+' { PT _ (TS _ 9) }
  '++' { PT _ (TS _ 10) }
  ',' { PT _ (TS _ 11) }
  '-' { PT _ (TS _ 12) }
  '--' { PT _ (TS _ 13) }
  '->' { PT _ (TS _ 14) }
  '.' { PT _ (TS _ 15) }
  '/' { PT _ (TS _ 16) }
  ':' { PT _ (TS _ 17) }
  '::' { PT _ (TS _ 18) }
  ';' { PT _ (TS _ 19) }
  '<' { PT _ (TS _ 20) }
  '<<' { PT _ (TS _ 21) }
  '<=' { PT _ (TS _ 22) }
  '=' { PT _ (TS _ 23) }
  '==' { PT _ (TS _ 24) }
  '>' { PT _ (TS _ 25) }
  '>=' { PT _ (TS _ 26) }
  '>>' { PT _ (TS _ 27) }
  '?' { PT _ (TS _ 28) }
  '[' { PT _ (TS _ 29) }
  ']' { PT _ (TS _ 30) }
  'bool' { PT _ (TS _ 31) }
  'const' { PT _ (TS _ 32) }
  'do' { PT _ (TS _ 33) }
  'double' { PT _ (TS _ 34) }
  'else' { PT _ (TS _ 35) }
  'false' { PT _ (TS _ 36) }
  'for' { PT _ (TS _ 37) }
  'if' { PT _ (TS _ 38) }
  'int' { PT _ (TS _ 39) }
  'return' { PT _ (TS _ 40) }
  'string' { PT _ (TS _ 41) }
  'throw' { PT _ (TS _ 42) }
  'true' { PT _ (TS _ 43) }
  'typedef' { PT _ (TS _ 44) }
  'using' { PT _ (TS _ 45) }
  'void' { PT _ (TS _ 46) }
  'while' { PT _ (TS _ 47) }
  '{' { PT _ (TS _ 48) }
  '||' { PT _ (TS _ 49) }
  '}' { PT _ (TS _ 50) }
  L_charac { PT _ (TC $$) }
  L_integ  { PT _ (TI $$) }
  L_doubl  { PT _ (TD $$) }
  L_quoted { PT _ (TL $$) }
  L_Id { PT _ (T_Id $$) }

%%

Char    :: { Char }
Char     : L_charac { (read ($1)) :: Char }

Integer :: { Integer }
Integer  : L_integ  { (read ($1)) :: Integer }

Double  :: { Double }
Double   : L_doubl  { (read ($1)) :: Double }

String  :: { String }
String   : L_quoted { $1 }

Id :: { AbsGrammar.Id}
Id  : L_Id { AbsGrammar.Id $1 }

Program :: { AbsGrammar.Program }
Program : ListDef { AbsGrammar.PDefs $1 }

ListDef :: { [AbsGrammar.Def] }
ListDef : {- empty -} { [] } | Def ListDef { (:) $1 $2 }

Def :: { AbsGrammar.Def }
Def : Type Id '(' ListArg ')' '{' ListStm '}' { AbsGrammar.DFun $1 $2 $4 $7 }
    | Type Id '(' ListArg ')' ';' { AbsGrammar.DFunCall $1 $2 $4 }
    | 'using' Exp ';' { AbsGrammar.DNameSpace $2 }
    | Type Decl ';' { AbsGrammar.DDecl $1 $2 }
    | Type ListDecl ';' { AbsGrammar.DDecls $1 $2 }
    | 'typedef' Type Id ';' { AbsGrammar.DTypeDefId $2 $3 }

ListArg :: { [AbsGrammar.Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }

ListDecl :: { [AbsGrammar.Decl] }
ListDecl : Decl { (:[]) $1 } | Decl ',' ListDecl { (:) $1 $3 }

ListStm :: { [AbsGrammar.Stm] }
ListStm : {- empty -} { [] } | Stm ListStm { (:) $1 $2 }

Stm :: { AbsGrammar.Stm }
Stm : 'typedef' Type Id ';' { AbsGrammar.STypeDefId $2 $3 }
    | Type Decl ';' { AbsGrammar.SDecl $1 $2 }
    | Type ListDecl ';' { AbsGrammar.SDecls $1 $2 }
    | Type Id '=' Exp ';' { AbsGrammar.SInit $1 $2 $4 }
    | Exp ';' { AbsGrammar.SEexp $1 }
    | 'return' Exp ';' { AbsGrammar.SReturn $2 }
    | 'while' '(' Exp ')' Stm { AbsGrammar.SWhile $3 $5 }
    | 'while' '(' Exp ')' ';' { AbsGrammar.SEWhile $3 }
    | '{' ListStm '}' { AbsGrammar.SBlock $2 }
    | 'if' '(' Exp ')' Stm Else { AbsGrammar.SIfElse $3 $5 $6 }
    | '{' ListStm '}' { AbsGrammar.SBlock $2 }
    | 'const' Type '&' Id '=' Exp ';' { AbsGrammar.SConstRefInit $2 $4 $6 }
    | 'for' '(' Type Id '=' Exp ';' Exp ';' Exp ')' Stm { AbsGrammar.SFor $3 $4 $6 $8 $10 $12 }
    | 'const' Type Id '=' Exp ';' { AbsGrammar.SConstInitId $2 $3 $5 }
    | 'do' Stm 'while' '(' Exp ')' ';' { AbsGrammar.SDo $2 $5 }

Arg :: { AbsGrammar.Arg }
Arg : Type { AbsGrammar.ADecl $1 }
    | Type Id { AbsGrammar.ADeclId $1 $2 }
    | 'const' Type '&' Id { AbsGrammar.AConstRefTypeId $2 $4 }
    | Type '&' Id { AbsGrammar.ARefId $1 $3 }
    | 'const' Type '&' { AbsGrammar.AConstRefType $2 }
    | Type '&' { AbsGrammar.ARefType $1 }

Decl :: { AbsGrammar.Decl }
Decl : Id { AbsGrammar.SDeclId $1 }

Else :: { AbsGrammar.Else }
Else : {- empty -} { AbsGrammar.SEElse }
     | 'else' Stm { AbsGrammar.SElse $2 }

Exp15 :: { AbsGrammar.Exp }
Exp15 : Char { AbsGrammar.EChar $1 }
      | Integer { AbsGrammar.EInt $1 }
      | Double { AbsGrammar.EDouble $1 }
      | StringList { AbsGrammar.EString $1 }
      | 'true' { AbsGrammar.ETrue }
      | 'false' { AbsGrammar.EFalse }
      | Id { AbsGrammar.EId $1 }
      | Exp15 '[' Exp ']' { AbsGrammar.EIndex $1 $3 }
      | Exp15 '(' ListExp ')' { AbsGrammar.ECall $1 $3 }
      | Exp15 '.' Exp14 { AbsGrammar.EFun $1 $3 }
      | '*' Exp15 { AbsGrammar.EDeref $2 }
      | Exp15 '<<' Exp14 { AbsGrammar.ELl $1 $3 }
      | Exp15 '>>' Id { AbsGrammar.EGg $1 $3 }
      | Type { AbsGrammar.ELib $1 }
      | Id '::' Exp16 { AbsGrammar.ELibs $1 $3 }
      | Exp16 { $1 }

Exp14 :: { AbsGrammar.Exp }
Exp14 : Exp15 '++' { AbsGrammar.EPIncr $1 }
      | Exp15 '--' { AbsGrammar.EPDcecr $1 }
      | Exp15 { $1 }

Exp13 :: { AbsGrammar.Exp }
Exp13 : '!' Exp14 { AbsGrammar.ENot $2 }
      | '++' Exp14 { AbsGrammar.EIncr $2 }
      | '--' Exp14 { AbsGrammar.EDecr $2 }
      | '-' Exp14 { AbsGrammar.ENeg $2 }
      | Exp13 '->' Exp14 { AbsGrammar.EArrow $1 $3 }
      | Exp14 { $1 }

Exp12 :: { AbsGrammar.Exp }
Exp12 : Exp12 '*' Exp13 { AbsGrammar.EMul $1 $3 }
      | Exp12 '/' Exp13 { AbsGrammar.EDiv $1 $3 }
      | Exp12 '%' Exp13 { AbsGrammar.EMod $1 $3 }
      | Exp13 { $1 }

Exp11 :: { AbsGrammar.Exp }
Exp11 : Exp11 '+' Exp12 { AbsGrammar.EAdd $1 $3 }
      | Exp11 '-' Exp12 { AbsGrammar.ESub $1 $3 }
      | Exp12 { $1 }

Exp9 :: { AbsGrammar.Exp }
Exp9 : Exp9 '<' Exp10 { AbsGrammar.ELt $1 $3 }
     | Exp9 '>' Exp10 { AbsGrammar.EGt $1 $3 }
     | Exp9 '<=' Exp10 { AbsGrammar.ELEq $1 $3 }
     | Exp9 '>=' Exp10 { AbsGrammar.EGEq $1 $3 }
     | Exp10 { $1 }

Exp8 :: { AbsGrammar.Exp }
Exp8 : Exp8 '==' Exp9 { AbsGrammar.EEq $1 $3 }
     | Exp8 '!=' Exp9 { AbsGrammar.ENEq $1 $3 }
     | Exp9 { $1 }

Exp4 :: { AbsGrammar.Exp }
Exp4 : Exp4 '&&' Exp5 { AbsGrammar.EAnd $1 $3 } | Exp5 { $1 }

Exp3 :: { AbsGrammar.Exp }
Exp3 : Exp3 '||' Exp4 { AbsGrammar.EOr $1 $3 } | Exp4 { $1 }

Exp2 :: { AbsGrammar.Exp }
Exp2 : Exp3 '=' Exp2 { AbsGrammar.EAss $1 $3 }
     | 'throw' Exp2 { AbsGrammar.EThrowE $2 }
     | Exp3 '?' Exp2 ':' Exp2 { AbsGrammar.EQstnmrk $1 $3 $5 }
     | Exp3 { $1 }

Exp :: { AbsGrammar.Exp }
Exp : Exp1 { $1 }

Exp1 :: { AbsGrammar.Exp }
Exp1 : Exp2 { $1 }

Exp5 :: { AbsGrammar.Exp }
Exp5 : Exp6 { $1 }

Exp6 :: { AbsGrammar.Exp }
Exp6 : Exp7 { $1 }

Exp7 :: { AbsGrammar.Exp }
Exp7 : Exp8 { $1 }

Exp10 :: { AbsGrammar.Exp }
Exp10 : Exp11 { $1 }

Exp16 :: { AbsGrammar.Exp }
Exp16 : '(' Exp ')' { $2 }

ListExp :: { [AbsGrammar.Exp] }
ListExp : {- empty -} { [] }
        | Exp { (:[]) $1 }
        | Exp ',' ListExp { (:) $1 $3 }

Type :: { AbsGrammar.Type }
Type : 'bool' { AbsGrammar.Tbool }
     | 'double' { AbsGrammar.Tdouble }
     | 'int' { AbsGrammar.Tint }
     | 'string' { AbsGrammar.Tstring }
     | 'void' { AbsGrammar.Tvoid }
     | Id { AbsGrammar.Tnew $1 }
     | Id '::' Type { AbsGrammar.TLit $1 $3 }

StringList :: { AbsGrammar.StringList }
StringList : ListString { AbsGrammar.StringList $1 }

ListString :: { [String] }
ListString : String { (:[]) $1 } | String ListString { (:) $1 $2 }
{

happyError :: [Token] -> Either String a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer = tokens
}
