Lab1/lab1-testsuite/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from ParGrammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pStm -> Stm                                 (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp14 -> Exp14                             (8)
	%start_pExp13 -> Exp13                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp9 -> Exp9                               (12)
	%start_pExp8 -> Exp8                               (13)
	%start_pExp4 -> Exp4                               (14)
	%start_pExp3 -> Exp3                               (15)
	%start_pExp2 -> Exp2                               (16)
	%start_pExp10 -> Exp10                             (17)
	%start_pExp -> Exp                                 (18)
	%start_pExp1 -> Exp1                               (19)
	%start_pExp5 -> Exp5                               (20)
	%start_pExp6 -> Exp6                               (21)
	%start_pExp7 -> Exp7                               (22)
	%start_pListExp -> ListExp                         (23)
	%start_pType -> Type                               (24)
	Integer -> L_integ                                 (25)
	Double -> L_doubl                                  (26)
	String -> L_quoted                                 (27)
	Id -> L_Id                                         (28)
	Program -> ListDef                                 (29)
	ListDef ->                                         (30)
	ListDef -> Def ListDef                             (31)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (32)
	ListArg ->                                         (33)
	ListArg -> Arg                                     (34)
	ListArg -> Arg ',' ListArg                         (35)
	ListStm ->                                         (36)
	ListStm -> Stm ListStm                             (37)
	Arg -> Type Id                                     (38)
	Stm -> Type Id ';'                                 (39)
	Stm -> Type Id '=' Exp ';'                         (40)
	Stm -> Exp ';'                                     (41)
	Stm -> 'return' Exp ';'                            (42)
	Stm -> 'while' '(' Exp ')' Stm                     (43)
	Stm -> '{' ListStm '}'                             (44)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (45)
	Exp15 -> Integer                                   (46)
	Exp15 -> Double                                    (47)
	Exp15 -> String                                    (48)
	Exp15 -> 'true'                                    (49)
	Exp15 -> 'false'                                   (50)
	Exp15 -> Id                                        (51)
	Exp15 -> Id '(' ListExp ')'                        (52)
	Exp15 -> '(' Exp ')'                               (53)
	Exp14 -> Exp15 '++'                                (54)
	Exp14 -> Exp15 '--'                                (55)
	Exp14 -> Exp15                                     (56)
	Exp13 -> '++' Exp14                                (57)
	Exp13 -> '--' Exp14                                (58)
	Exp13 -> '-' Exp14                                 (59)
	Exp13 -> Exp14                                     (60)
	Exp12 -> Exp12 '*' Exp13                           (61)
	Exp12 -> Exp12 '/' Exp13                           (62)
	Exp12 -> Exp13                                     (63)
	Exp11 -> Exp11 '+' Exp12                           (64)
	Exp11 -> Exp11 '-' Exp12                           (65)
	Exp11 -> Exp12                                     (66)
	Exp9 -> Exp9 '<' Exp10                             (67)
	Exp9 -> Exp9 '>' Exp10                             (68)
	Exp9 -> Exp9 '<=' Exp10                            (69)
	Exp9 -> Exp9 '>=' Exp10                            (70)
	Exp9 -> Exp10                                      (71)
	Exp8 -> Exp8 '==' Exp9                             (72)
	Exp8 -> Exp8 '!=' Exp9                             (73)
	Exp8 -> Exp9                                       (74)
	Exp4 -> Exp4 '&&' Exp5                             (75)
	Exp4 -> Exp5                                       (76)
	Exp3 -> Exp3 '||' Exp4                             (77)
	Exp3 -> Exp4                                       (78)
	Exp2 -> Exp3 '=' Exp2                              (79)
	Exp2 -> Exp3                                       (80)
	Exp10 -> Exp10 '<<' Exp11                          (81)
	Exp10 -> Exp10 '>>' Exp11                          (82)
	Exp10 -> Exp11                                     (83)
	Exp -> Exp1                                        (84)
	Exp1 -> Exp2                                       (85)
	Exp5 -> Exp6                                       (86)
	Exp6 -> Exp7                                       (87)
	Exp7 -> Exp8                                       (88)
	ListExp ->                                         (89)
	ListExp -> Exp                                     (90)
	ListExp -> Exp ',' ListExp                         (91)
	Type -> 'bool'                                     (92)
	Type -> 'double'                                   (93)
	Type -> 'int'                                      (94)
	Type -> 'string'                                   (95)
	Type -> 'void'                                     (96)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'--'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<<'           { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'>>'           { PT _ (TS _ 20) }
	'bool'         { PT _ (TS _ 21) }
	'double'       { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'return'       { PT _ (TS _ 27) }
	'string'       { PT _ (TS _ 28) }
	'true'         { PT _ (TS _ 29) }
	'void'         { PT _ (TS _ 30) }
	'while'        { PT _ (TS _ 31) }
	'{'            { PT _ (TS _ 32) }
	'||'           { PT _ (TS _ 33) }
	'}'            { PT _ (TS _ 34) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pStm     rule  6
	%start_pExp15   rule  7
	%start_pExp14   rule  8
	%start_pExp13   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp9    rule  12
	%start_pExp8    rule  13
	%start_pExp4    rule  14
	%start_pExp3    rule  15
	%start_pExp2    rule  16
	%start_pExp10   rule  17
	%start_pExp     rule  18
	%start_pExp1    rule  19
	%start_pExp5    rule  20
	%start_pExp6    rule  21
	%start_pExp7    rule  22
	%start_pListExp rule  23
	%start_pType    rule  24
	Integer         rule  25
	Double          rule  26
	String          rule  27
	Id              rule  28
	Program         rule  29
	ListDef         rules 30, 31
	Def             rule  32
	ListArg         rules 33, 34, 35
	ListStm         rules 36, 37
	Arg             rule  38
	Stm             rules 39, 40, 41, 42, 43, 44, 45
	Exp15           rules 46, 47, 48, 49, 50, 51, 52, 53
	Exp14           rules 54, 55, 56
	Exp13           rules 57, 58, 59, 60
	Exp12           rules 61, 62, 63
	Exp11           rules 64, 65, 66
	Exp9            rules 67, 68, 69, 70, 71
	Exp8            rules 72, 73, 74
	Exp4            rules 75, 76
	Exp3            rules 77, 78
	Exp2            rules 79, 80
	Exp10           rules 81, 82, 83
	Exp             rule  84
	Exp1            rule  85
	Exp5            rule  86
	Exp6            rule  87
	Exp7            rule  88
	ListExp         rules 89, 90, 91
	Type            rules 92, 93, 94, 95, 96

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         shift, and enter state 28
	'double'       shift, and enter state 29
	'int'          shift, and enter state 30
	'string'       shift, and enter state 31
	'void'         shift, and enter state 32
	%eof           reduce using rule 30

	Program        goto state 96
	ListDef        goto state 97
	Def            goto state 95
	Type           goto state 93

State 1


	'bool'         shift, and enter state 28
	'double'       shift, and enter state 29
	'int'          shift, and enter state 30
	'string'       shift, and enter state 31
	'void'         shift, and enter state 32
	%eof           reduce using rule 30

	ListDef        goto state 94
	Def            goto state 95
	Type           goto state 93

State 2


	'bool'         shift, and enter state 28
	'double'       shift, and enter state 29
	'int'          shift, and enter state 30
	'string'       shift, and enter state 31
	'void'         shift, and enter state 32

	Def            goto state 92
	Type           goto state 93

State 3


	'bool'         shift, and enter state 28
	'double'       shift, and enter state 29
	'int'          shift, and enter state 30
	'string'       shift, and enter state 31
	'void'         shift, and enter state 32
	%eof           reduce using rule 33

	ListArg        goto state 90
	Arg            goto state 91
	Type           goto state 87

State 4


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'bool'         shift, and enter state 28
	'double'       shift, and enter state 29
	'false'        shift, and enter state 58
	'if'           shift, and enter state 82
	'int'          shift, and enter state 30
	'return'       shift, and enter state 83
	'string'       shift, and enter state 31
	'true'         shift, and enter state 59
	'void'         shift, and enter state 32
	'while'        shift, and enter state 84
	'{'            shift, and enter state 85
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62
	%eof           reduce using rule 36

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	ListStm        goto state 88
	Stm            goto state 89
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 42
	Exp8           goto state 43
	Exp4           goto state 44
	Exp3           goto state 45
	Exp2           goto state 46
	Exp10          goto state 47
	Exp            goto state 80
	Exp1           goto state 49
	Exp5           goto state 50
	Exp6           goto state 51
	Exp7           goto state 52
	Type           goto state 81

State 5


	'bool'         shift, and enter state 28
	'double'       shift, and enter state 29
	'int'          shift, and enter state 30
	'string'       shift, and enter state 31
	'void'         shift, and enter state 32

	Arg            goto state 86
	Type           goto state 87

State 6


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'bool'         shift, and enter state 28
	'double'       shift, and enter state 29
	'false'        shift, and enter state 58
	'if'           shift, and enter state 82
	'int'          shift, and enter state 30
	'return'       shift, and enter state 83
	'string'       shift, and enter state 31
	'true'         shift, and enter state 59
	'void'         shift, and enter state 32
	'while'        shift, and enter state 84
	'{'            shift, and enter state 85
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Stm            goto state 79
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 42
	Exp8           goto state 43
	Exp4           goto state 44
	Exp3           goto state 45
	Exp2           goto state 46
	Exp10          goto state 47
	Exp            goto state 80
	Exp1           goto state 49
	Exp5           goto state 50
	Exp6           goto state 51
	Exp7           goto state 52
	Type           goto state 81

State 7


	'('            shift, and enter state 54
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 78

State 8


	'('            shift, and enter state 54
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 77

State 9


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 76

State 10


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 75

State 11


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 74

State 12


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 73
	Exp10          goto state 47

State 13


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 42
	Exp8           goto state 72
	Exp10          goto state 47

State 14


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 42
	Exp8           goto state 43
	Exp4           goto state 71
	Exp10          goto state 47
	Exp5           goto state 50
	Exp6           goto state 51
	Exp7           goto state 52

State 15


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 42
	Exp8           goto state 43
	Exp4           goto state 44
	Exp3           goto state 70
	Exp10          goto state 47
	Exp5           goto state 50
	Exp6           goto state 51
	Exp7           goto state 52

State 16


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 42
	Exp8           goto state 43
	Exp4           goto state 44
	Exp3           goto state 45
	Exp2           goto state 69
	Exp10          goto state 47
	Exp5           goto state 50
	Exp6           goto state 51
	Exp7           goto state 52

State 17


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp10          goto state 68

State 18


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 42
	Exp8           goto state 43
	Exp4           goto state 44
	Exp3           goto state 45
	Exp2           goto state 46
	Exp10          goto state 47
	Exp            goto state 67
	Exp1           goto state 49
	Exp5           goto state 50
	Exp6           goto state 51
	Exp7           goto state 52

State 19


	'('            shift, and enter state 54
	'++'           shift, and enter state 55
	'-'            shift, and enter state 56
	'--'           shift, and enter state 57
	'false'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 26
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 62

	Integer        goto state 33
	Double         goto state 34
	String         goto state 35
	Id             goto state 36
	Exp15          goto state 37
	Exp14          goto state 38
	Exp13          goto state 39
	Exp12          goto state 40
	Exp11          goto state 41
	Exp9           goto state 42
	Exp8           goto state 43
	Exp4           goto state 44
	Exp3           goto state 45
	Exp2           goto state 46
	Exp10          goto state 47
	Exp1           goto state 66
	Exp5           goto state 50
	Exp6           goto state 51
	Exp7           goto state 52

State 20

